# build and installation instructions for wn-companiontools
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wn-companiontools"
version = "0.0.1"
authors = [
  { name="Jannik Stebani", email="jannik.stebani@uni-wuerzburg.de" },
]
description = "Additional companion tooling for demonstration purposes, visualization and data loading for the woodnet pipeline and paper project. "
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta"
]
license = {file = "LICENSE.txt"}
keywords = ["tooling", "jupyter", "visualization", "widget"]

dependencies = [
  "numpy",
  "matplotlib",
  "k3d",
  "ipywidgets",
  "zarr",
  "h5py"
]

[project.urls]
Homepage = "https://github.com/stebix/wn-companiontools/"
Issues = "https://github.com/stebix/wn-companiontools/issues"